# vd-app

./: .gitmodules
client/: next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.css
client/components/: ConduitSizeOption.tsx  TaskList.tsx  WireSizeOption.tsx
client/components/ConduitFill/: ConduitFillTable.tsx
client/components/MaxDistance/: MaxDistanceTable.tsx
client/components/Tasks/: TaskForm.tsx  TaskList.tsx
client/hooks/: useTasks.ts
client/pages/: _app.tsx  _document.tsx  index.tsx
client/styles/: globals.css
server/: Cargo.toml  Config.toml  Dockerfile
server/src/: configuration.rs  main.rs
